--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,9 @@ plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
     id 'jacoco'
+
+    // https://github.com/researchgate/gradle-release
+    id 'net.researchgate.release' version '3.0.2'
 }
 
 group 'com.sas.kafka.auth'
@@ -49,6 +52,10 @@ allprojects {
             options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
         }
     }
+}
+
+release {
+  failOnUpdateNeeded = false
 }
 
 test {
